# GLIMPSE

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  9500Graph.html  Disclaimer.doc  Dockerfile.backend  Dockerfile.frontend  Graph.html  LICENSE_BSD_2022.docx  NOTICE.txt  README  README.md  create_server_exe.ps1  create_server_exe.sh  dev-wrapper.js  docker-compose.yml  electron-builder.yml  electron.vite.config.1747152778021.mjs  electron.vite.config.mjs  eslint.config.js  eslint.config.mjs  index.html  network.html  nginx.conf  package-lock.json  package.json  postInstall.js  quiteDocker.sh  run_outside_docker.sh  simulation.sh  testsocket.py  vite.config.js
config/: appConfig.json
data/: IEEE-123_Inverters_fixed.glm  csvexample.csv  object_freq_editAS.csv
docker/: 40-glimpse-env.sh
electron/: main.js  splash.html
glimpse/: .gitignore  .json  electron-builder.yaml  electron-builder.yml  example.json  forge.config.js  glm2jsonData.json  main.js  package.json  preload.js  upload.schema.json  webpack.common.js
glm_vis_w_py/: 123Model.csv  IEEE-123_Dynamic_fixed.csv
local-server/: cimhelper.py  glmhelper.py  gridappsdhelper.py  jsonhelper.py  pyproject.toml  readmultifeeder.py  requirements-server.txt  requirements.txt  server.py  server.spec  server_2.py  server___.py
local-server/schemas/: theme_upload.schema.json
natig/: quitDocker.ps1  quitDocker.sh  quiteDocker.sh  run_outside_docker.ps1  run_outside_docker.sh  simulation.ps1  simulation.sh  testsocket.py
output/: objects.csv
public/: env.js
schemas/: json_upload.schema.json  (+1 more)
(+622 files in other folders)
