[project]
name = "local-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
 "cim-graph==0.4.3a4",
 "flask>=3.1.2",
 "flask-cors>=6.0.2",
 "flask-socketio>=5.6.0",
 "gevent>=25.9.1",
 "gevent-websocket>=0.10.1",
 "jsonschema>=4.26.0",
 "networkx>=3.6.1",
 "pyinstaller>=6.18.0",
 "requests>=2.28.2",
 "setuptools>=80.9.0",
 "wheel>=0.45.1",
]
